Egen side for applikasjonene

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Team Permittering og Nedbemanning
 header_pages:
-  - README.md
-  - permitteringsmelding.md
+  - index.md
+  - applikasjoner.md
 theme: minima
